# eduinfoh413a1

./: CMakeLists.txt  Makefile  README.md  notes.md
best_known/: best_known.txt
experiments/: averages  ii_cw_best_exchange  ii_cw_best_insert  ii_cw_best_insertion  ii_cw_best_transpose  ii_cw_first_exchange  ii_cw_first_insert  ii_cw_first_insertion  ii_cw_first_transpose  ii_random_best_exchange  ii_random_best_insert  ii_random_best_insertion  ii_random_best_transpose  ii_random_first_exchange  ii_random_first_insert  ii_random_first_insertion  ii_random_first_transpose  vnd_tei  vnd_tie
experiments/stats_tests/: ii_t  ii_wilcoxon  vnd_t  vnd_wilcoxon
report/: compilation.tex  ex1.tex  ex2.tex  hierarchy.tex  introduction.tex  notes.md  report.tex
scripts/: compute_averages.lua  generate_experiments.lua  generate_experiments.sh  generate_experiments_one.lua  statistical_hypothesis_tests.R  summary_algorithms.lua
src/: GlobalArgs.cpp  GlobalArgs.hpp  Initialization.cpp  Initialization.hpp  Instance.cpp  Instance.hpp  IterativeImprovement.cpp  IterativeImprovement.hpp  Neighbourhood.cpp  Neighbourhood.hpp  Permutation.cpp  Permutation.hpp  instance.c  main.c  main.cpp  main_II.cpp  main_VND.cpp  optimization.c  options.c  options.h  rand.c  rand.h  utilities.c  utilities.h
src/IterativeImprovement/: GlobalArgsII.cpp  IterativeImprovement.cpp
src/VariableNeighbourhoodDescent/: GlobalArgsVND.hpp  VariableNeighbourhoodDescent.cpp
src/neighbourhoods/: Neighbourhood.hpp
src/rules/: Initialization.hpp  RulesFactory.cpp  RulesFactory.hpp
src/rules/Initialization/: CWInitialization.cpp  CWInitialization.hpp  Initialization.hpp  RandomInitialization.cpp  RandomInitialization.hpp
src/rules/Neighbourhood/: ExchangeNeighbourhood.cpp  ExchangeNeighbourhood.hpp  InsertNeighbourhood.cpp  InsertNeighbourhood.hpp  Neighbourhood.cpp  Neighbourhood.hpp  TransposeNeighbourhood.cpp  TransposeNeighbourhood.hpp
src/rules/Pivoting/: BestImprovement.cpp  (+4 more)
src/tests/: best_improvement.cpp  cw_init.cpp  first_improvement.cpp  load_instance.cpp  neighbourhoods.cpp  random_init.cpp  string_matrix_permutation.cpp
